[package]
name = "epsaku"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
roxmltree = "0.14.1"
textwrap = "0.15.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
